Work in progress in Hope page

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,10 +9,10 @@
             <img src="./images/logo/logo-dark.svg" alt="Logo" class="hidden dark:block" />
           </a>
 
-          <p class="mt-5 mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="mt-5 mb-10">Unlock Efficiency, Accuracy, and Excellence – Your All-in-One Hub for Remote Business Support Services!</p>
 
           <p class="uppercase tracking-[5px] text-sectiontitle mb-1.5">contact</p>
-          <a href="#" class="text-black dark:text-white font-medium text-itemtitle">hello@solid.com</a>
+          <a href="#" class="text-black dark:text-white font-medium text-itemtitle">sales@fortremote.pro    </a>
         </div>
 
         <div class="w-full lg:w-2/3 xl:w-7/12 flex flex-col md:flex-row md:justify-between gap-8 md:gap-0">
@@ -20,10 +20,10 @@
             <h4 class="font-medium text-black dark:text-white text-itemtitle2 mb-9">Quick Links</h4>
 
             <ul>
-              <li><a href="#" class="inline-block hover:text-primary mb-3">Home</a></li>
-              <li><a href="#" class="inline-block hover:text-primary mb-3">Product</a></li>
-              <li><a href="#" class="inline-block hover:text-primary mb-3">Careers</a></li>
-              <li><a href="#" class="inline-block hover:text-primary mb-3">Pricing</a></li>
+              <li><a href="/" class="inline-block hover:text-primary mb-3">Home</a></li>
+              <li><a href="index.html#features" class="inline-block hover:text-primary mb-3">Services</a></li>
+              <li><a href="#" class="inline-block hover:text-primary mb-3">Our services</a></li>
+              <li><a href="#" class="inline-block hover:text-primary mb-3">Contact Us</a></li>
             </ul>
           </div>
 
@@ -84,7 +84,7 @@
       </div>
 
       <div class="animate_top">
-        <p>&copy; 2025 Solid. All rights reserved</p>
+        <p>&copy; <script>{{ var currentDate = new Date(); var currentYear = currentDate.getFullYear(); document.write(currentYear)}}</script> Solid. All rights reserved</p>
       </div>
 
       <div class="animate_top">
