--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
   <div class="mx-auto max-w-c-1390 px-4 md:px-8 2xl:px-0 lg:flex items-center justify-between relative">
     <div class="w-full lg:w-1/4 flex items-center justify-between">
       <a href="index.html">
-        <img class="dark:hidden" src="./images/logo/logo-light.svg" alt="Logo Light" />
+        <img class="dark:hidden h-[50px]" src="./images/logo/logo-light.svg" alt="Logo Light" />
         <img class="hidden dark:block" src="./images/logo/logo-dark.svg" alt="Logo Dark" />
       </a>
 
