--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,6 +35,7 @@
         <ul class="flex lg:items-center flex-col lg:flex-row gap-5 lg:gap-10">
           <li><a href="index.html" class="hover:text-primary" :class="{ 'text-primary': page === 'home' }">Home</a></li>
           <li><a href="index.html#features" class="hover:text-primary">Services</a></li>
+          <li><a href="blog-grid.html" class="hover:text-primary">Our Blog</a></li>
           <li><a href="about-us.html" class="hover:text-primary">About Us</a></li>
           <li><a href="contact.html" class="hover:text-primary">Contact Us</a></li>
           <li class="group relative" x-data="{ dropdown: false }">
@@ -63,7 +64,7 @@
             </ul>
             <!-- Dropdown End -->
           </li>
-          <li><a href="index.html#support" class="hover:text-primary">Support</a></li>
+<!--          <li><a href="index.html#support" class="hover:text-primary">Support</a></li>-->
         </ul>
       </nav>
 
