--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
     <div class="w-full lg:w-1/4 flex items-center justify-between">
       <a href="index.html">
         <img class="dark:hidden h-[50px]" src="./images/logo/logo-light.svg" alt="Logo Light" />
-        <img class="hidden dark:block" src="./images/logo/logo-dark.svg" alt="Logo Dark" />
+        <img class="hidden dark:block" src="./images/logo/logo-light.svg" alt="Logo Dark" />
       </a>
 
       <!-- Hamburger Toggle BTN -->
@@ -33,10 +33,10 @@
     >
       <nav>
         <ul class="flex lg:items-center flex-col lg:flex-row gap-5 lg:gap-10">
-          <li><a href="index.html" class="hover:text-primary" :class="{ 'text-primary': page === 'home' }">Home</a></li>
+<!--          <li><a href="index.html" class="hover:text-primary" :class="{ 'text-primary': page === 'home' }">Home</a></li>-->
           <li><a href="index.html#features" class="hover:text-primary">Services</a></li>
-          <li><a href="blog-grid.html" class="hover:text-primary">Our Blog</a></li>
-          <li><a href="about-us.html" class="hover:text-primary">About Us</a></li>
+<!--          <li><a href="blog-grid.html" class="hover:text-primary">Our Blog</a></li>-->
+<!--          <li><a href="about-us.html" class="hover:text-primary">About Us</a></li>-->
           <li><a href="contact.html" class="hover:text-primary">Contact Us</a></li>
           <li class="group relative" x-data="{ dropdown: false }">
             <a
