added our story, misiion... changed nav items from 5 to 3

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,11 +34,12 @@
       <nav>
         <ul class="flex lg:items-center flex-col lg:flex-row gap-5 lg:gap-10">
 <!--          <li><a href="index.html" class="hover:text-primary" :class="{ 'text-primary': page === 'home' }">Home</a></li>-->
-          <li><a href="index.html#features" class="hover:text-primary">Services</a></li>
+
 <!--          <li><a href="blog-grid.html" class="hover:text-primary">Our Blog</a></li>-->
-<!--          <li><a href="about-us.html" class="hover:text-primary">About Us</a></li>-->
+          <li><a href="index.html#about" class="hover:text-primary">About Us</a></li>
+          <li><a href="index.html#features" class="hover:text-primary">Services</a></li>
           <li><a href="contact.html" class="hover:text-primary">Contact Us</a></li>
-          <li class="group relative" x-data="{ dropdown: false }">
+        <!--  <li class="group relative" x-data="{ dropdown: false }">
             <a
               href="#"
               class="hover:text-primary flex items-center justify-between gap-3"
@@ -54,7 +55,7 @@
               </svg>
             </a>
 
-            <!-- Dropdown Start -->
+            &lt;!&ndash; Dropdown Start &ndash;&gt;
             <ul class="dropdown" :class="{ 'flex': dropdown }">
               <li><a href="blog-grid.html" class="hover:text-primary" :class="{ 'text-primary': page === 'blog-grid' }">Blog Grid</a></li>
               <li><a href="blog-single.html" class="hover:text-primary" :class="{ 'text-primary': page === 'blog-single' }">Blog Single</a></li>
@@ -62,8 +63,8 @@
               <li><a href="signup.html" class="hover:text-primary" :class="{ 'text-primary': page === 'signup' }">Sign Up</a></li>
               <li><a href="404.html" class="hover:text-primary" :class="{ 'text-primary': page === '404' }">404</a></li>
             </ul>
-            <!-- Dropdown End -->
-          </li>
+            &lt;!&ndash; Dropdown End &ndash;&gt;
+          </li>-->
 <!--          <li><a href="index.html#support" class="hover:text-primary">Support</a></li>-->
         </ul>
       </nav>
