--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -41,7 +41,7 @@
           <div class="animate_top">
             <h4 class="font-medium text-black dark:text-white text-itemtitle2">Address</h4>
             <div class="mb-3 mt-9">
-              <p>124 City Road, London, EC1V 2NX United Kingdom</p>
+              <p>124 City Road, London, <br> EC1V 2NX United Kingdom</p>
             </div>
             <div class="mb-3">
               <h4 class="font-medium text-black dark:text-white text-metatitle3 ">Email Address</h4>
