--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -79,7 +79,7 @@
         </div>
 
         <a href="signin.html" class="text-waterloo text-regular font-medium hover:text-primary">Sign In</a>
-        <a href="#" class="flex items-center justify-center bg-primary hover:bg-primaryho ease-in-out duration-300 text-white text-regular rounded-full py-2.5 px-7.5">Download</a>
+        <a href="#" class="flex items-center justify-center bg-primary hover:bg-primaryho ease-in-out duration-300 text-white text-regular rounded-full py-2.5 px-7.5">Get Quote</a>
       </div>
     </div>
   </div>
