--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,5 +48,6 @@ const { title } = Astro.props;
 	</button>
     <!-- ====== Back To Top End ===== -->
   </body>
+    <script src="/js/index.js"></script>
 </html>
 
