fix: Rectified the new features revised from owner and minor chnages like reducing text for tool stack and adding its title and sub title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -375,11 +375,13 @@ import Testimonials from '../components/Testimonials.vue'
   <section>
     <div class="mx-auto max-w-c-1390 px-4 md:px-8 2xl:px-0">
       <!-- Section Title Start -->
-      <div
-          class="animate_top text-center mx-auto "
-          x-data="{ sectionTitle: `OUR TOOLS`, sectionSubtitle: `Our Tool Stack`, sectionTitlePara: `Discover the tools Fort Remote Solutions relies on for success, including QuickBooks for financial precision, Excel for data-driven insights, Laravel for cutting-edge web development, MariaDB/MySQL for robust databases, ClickUp for efficient project management, and Vue for creating captivating user interfaces. Join us in harnessing the power of these essential tools for your business.`}"
-      >
-        <include src="./partials/section-title.html"/>
+      <div class="animate_top text-center mx-auto " >
+
+        <div class="bg-zumthor dark:bg-blacksection dark:border dark:border-strokedark inline-block rounded-full py-1.5 px-4.5 mb-4">
+          <h4  class="font-medium text-sectiontitle text-black dark:text-white">OUR TOOLS</h4>
+        </div>
+        <h2 class="font-bold text-3xl xl:text-sectiontitle3 text-black dark:text-white md:w-4/5 xl:w-1/2 mx-auto mb-4">Our Tool Stack</h2>
+        <p class="mx-auto md:w-4/5 lg:w-3/5 xl:w-[46%]" >Are you in need of efficient and reliable remote bookkeeping and data entry services? Look no further! Our team of skilled professionals is equipped with a powerful tool stack to handle all your financial and data management needs. We understand the importance of accuracy, security, and efficiency in bookkeeping and data entry, and that's why we've carefully curated our tool stack to ensure we meet and exceed your expectations. Here's an overview of the tools we use to provide top-notch services.</p>
       </div>
       <!-- Section Title End -->
     </div>
