Rectified contact page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,7 @@
-clear---
+
+---
 import Layout from '../layouts/Layout.astro';
+import Chat from '../components/Chat.vue'
 import FeatureTabs from '../components/FeatureTabs.vue'
 import Faq from '../components/Faq.vue'
 import Testimonials from '../components/Testimonials.vue'
@@ -145,6 +147,7 @@ import Testimonials from '../components/Testimonials.vue'
                         <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">WhatsApp Number</h4>
                         <p><a href="#">+1 267-995-8208</a></p>
                     </div>
+
                 </div>
 
             </div>
