Added whatsapp chat in contact page, Fix: contact page removed h-screen

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,7 +10,7 @@ import Testimonials from '../components/Testimonials.vue'
 <Layout title="Our services.">
 
     <!-- ===== Contact us section Start ===== -->
-    <section id="support" class="px-4 md:px-8 2xl:px-0 h-screen ">
+    <section id="support" class="px-4 md:px-8 2xl:px-0 ">
 
         <div class="mx-auto max-w-c-1390 relative pt-10  lg:pt-15 xl:pt-20 px-7.5 lg:px-15 xl:px-20 overflow-hidden">
             <div
@@ -157,7 +157,9 @@ import Testimonials from '../components/Testimonials.vue'
 
     </section>
     <!-- ===== Contact us section End ===== -->
-
+<div>
+    <Chat />
+</div>
 
 </Layout>
 
