--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,10 +14,10 @@ import Testimonials from '../components/Testimonials.vue'
 
         <div class="mx-auto max-w-c-1390 relative pt-10  lg:pt-15 xl:pt-20 px-7.5 lg:px-15 xl:px-20 overflow-hidden">
             <div
-                    class="animate_top text-center mx-auto"
+                    class="animate_top text-center mx-auto sm:flex justify-around"
 
             >
-                <h2 class="font-bold text-3xl xl:text-sectiontitle3 text-black dark:text-white md:w-4/5 xl:w-1/2 mx-auto py-10">Contact Us</h2>
+                <h2 class="font-bold text-3xl xl:text-sectiontitle3 text-black dark:text-white md:w-4/5 xl:w-1/2 mx-auto py-10 ">Contact Us</h2>
             </div>
             <div class="absolute -z-1 rounded-lg left-0 top-0 w-full h-2/3 bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-[#24283E] dark:to-[#252A42]"></div>
 
@@ -158,7 +158,7 @@ import Testimonials from '../components/Testimonials.vue'
     </section>
     <!-- ===== Contact us section End ===== -->
 <div>
-    <Chat />
+    <Chat client:only="vue"/>
 </div>
 
 </Layout>
