--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,6 +2,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Chat from '../components/Chat.vue'
+import Chat1 from '../components/Chat1.vue'
 import FeatureTabs from '../components/FeatureTabs.vue'
 import Faq from '../components/Faq.vue'
 import Testimonials from '../components/Testimonials.vue'
@@ -158,7 +159,7 @@ import Testimonials from '../components/Testimonials.vue'
     </section>
     <!-- ===== Contact us section End ===== -->
 <div>
-    <Chat client:only="vue"/>
+    <Chat1 client:only="vue"/>
 </div>
 
 </Layout>
