added howItWorks page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,8 +189,8 @@ import Workforce from '../assets/images/workforce.jpg'
       <FeatureTabs client:only="vue" />
       <!-- ===== Features Tab End ===== -->
 
-  <!-- ===== Funfact Start ===== -->
-  <section class="py-20 lg:py-22.5 px-4 md:px-8 2xl:px-0">
+  <!-- ===== FunFact Start ===== -->
+  <section class="py-20 lg:py-22.5 px-4 md:px-8 2xl:px-0 z-10">
     <div
         class="mx-auto max-w-c-1390 py-22.5 xl:py-27.5 relative z-1 rounded-lg bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-transparent dark:to-transparent dark:bg-blacksection dark:stroke-strokedark"
     >
@@ -222,7 +222,7 @@ import Workforce from '../assets/images/workforce.jpg'
       </div>
     </div>
   </section>
-  <!-- ===== Funfact End ===== -->
+  <!-- ===== FunFact End ===== -->
 
   <!-- ===== Integrations Start ===== -->
   <section>
