--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,8 +8,8 @@
       <div class="flex flex-wrap lg:justify-between gap-8 lg:gap-0">
         <div class="animate_top w-1/2 lg:w-1/4">
           <a href="index.html">
-            <img src="./images/logo/logo-light.svg" alt="Logo" class="dark:hidden" />
-            <img src="./images/logo/logo-dark.svg" alt="Logo" class="hidden dark:block" />
+            <img src="/images/logo/logo-light.svg" alt="Logo" class="dark:hidden" />
+            <img src="/images/logo/logo-dark.svg" alt="Logo" class="hidden dark:block" />
           </a>
 
           <p class="mt-5 mb-10">Unlock Efficiency, Accuracy, and Excellence – Your All-in-One Hub for Remote Business Support Services!</p>
