--- a/src/pages/howItWorks.astro
+++ b/src/pages/howItWorks.astro
@@ -25,8 +25,8 @@ import Testimonials from '../components/Testimonials.vue'
 
 
             <div class="absolute -z-1 bottom-5 left-0 w-full h-1/3">
-                <img src="./images/shape/shape-dotted-light.svg" alt="Dotted" class="dark:hidden" />
-                <img src="./images/shape/shape-dotted-dark.svg" alt="Dotted" class="hidden dark:block" />
+                <img src="/images/shape/shape-dotted-light.svg" alt="Dotted" class="dark:hidden" />
+                <img src="/images/shape/shape-dotted-dark.svg" alt="Dotted" class="hidden dark:block" />
             </div>
 
             <div class="flex flex-wrap md:flex-nowrap flex-col-reverse md:flex-row gap-8 xl:gap-20 md:justify-between">
