--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -22,7 +22,7 @@ import Layout from '../layouts/Layout.astro';
                 <!-- Features item Start -->
                 <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
                     <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
-                        <img src="./images/icon/icon-01.svg" alt="Icon"/>
+                        <img src="/images/icon/icon-01.svg" alt="Icon"/>
                     </div>
                     <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Bookkeeping Services</h3>
                     <p>Keeping your financial records in order is essential for making informed business decisions. Our expert bookkeepers
@@ -35,7 +35,7 @@ import Layout from '../layouts/Layout.astro';
                 <!-- Features item Start -->
                 <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
                     <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
-                        <img src="./images/icon/icon-02.svg" alt="Icon"/>
+                        <img src="/images/icon/icon-02.svg" alt="Icon"/>
                     </div>
                     <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Data Entry Services</h3>
                     <p>Data is the lifeblood of any organization. Whether it's organizing customer information, processing orders, or
@@ -48,7 +48,7 @@ import Layout from '../layouts/Layout.astro';
                 <!-- Features item Start -->
                 <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
                     <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
-                        <img src="./images/icon/icon-03.svg" alt="Icon"/>
+                        <img src="/images/icon/icon-03.svg" alt="Icon"/>
                     </div>
                     <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Virtual Customer care</h3>
                     <p>Exceptional customer service is a cornerstone of success. Our virtual customer care team is ready to provide your
@@ -61,7 +61,7 @@ import Layout from '../layouts/Layout.astro';
                 <!-- Features item Start -->
                 <!--<div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
                   <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
-                    <img src="./images/icon/icon-04.svg" alt="Icon" />
+                    <img src="/images/icon/icon-04.svg" alt="Icon" />
                   </div>
                   <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Speed Optimized</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
@@ -71,7 +71,7 @@ import Layout from '../layouts/Layout.astro';
                 <!-- Features item Start -->
                 <!--<div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
                   <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
-                    <img src="./images/icon/icon-05.svg" alt="Icon" />
+                    <img src="/images/icon/icon-05.svg" alt="Icon" />
                   </div>
                   <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Fully Customizable</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
@@ -81,7 +81,7 @@ import Layout from '../layouts/Layout.astro';
                 <!-- Features item Start -->
                 <!-- <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
                    <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
-                     <img src="./images/icon/icon-06.svg" alt="Icon" />
+                     <img src="/images/icon/icon-06.svg" alt="Icon" />
                    </div>
                    <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Regular Updates</h3>
                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
@@ -106,11 +106,11 @@ import Layout from '../layouts/Layout.astro';
                 </div>
                 <div class="animate_right lg:w-[45%]">
                     <div class="flex items-center justify-end xl:justify-between">
-                        <img src="./images/shape/shape-06.svg" alt="Saly" class="hidden xl:block" />
+                        <img src="/images/shape/shape-06.svg" alt="Saly" class="hidden xl:block" />
                         <a href="signup.html" class="inline-flex items-center gap-2.5 font-medium text-white dark:text-black bg-black dark:bg-white rounded-full py-3 px-6">
                             Sign up free
-                            <img src="./images/icon/icon-arrow-dark.svg" alt="Arrow" class="dark:hidden" />
-                            <img src="./images/icon/icon-arrow-light.svg" alt="Arrow" class="hidden dark:block" />
+                            <img src="/images/icon/icon-arrow-dark.svg" alt="Arrow" class="dark:hidden" />
+                            <img src="/images/icon/icon-arrow-light.svg" alt="Arrow" class="hidden dark:block" />
                         </a>
                     </div>
                 </div>
@@ -123,8 +123,8 @@ import Layout from '../layouts/Layout.astro';
     <section class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
         <div class="mx-auto max-w-c-1235 px-4 md:px-8 xl:px-0 relative">
             <div class="absolute -bottom-7.5 -z-1">
-                <img src="./images/shape/shape-dotted-light.svg" alt="Dotted" class="dark:hidden" />
-                <img src="./images/shape/shape-dotted-light.svg" alt="Dotted" class="hidden dark:block" />
+                <img src="/images/shape/shape-dotted-light.svg" alt="Dotted" class="dark:hidden" />
+                <img src="/images/shape/shape-dotted-light.svg" alt="Dotted" class="hidden dark:block" />
             </div>
             <div class="flex flex-wrap md:flex-nowrap md:items-center gap-8 xl:gap-32.5">
                 <div class="animate_left md:w-2/5 lg:w-1/2">
@@ -136,8 +136,8 @@ import Layout from '../layouts/Layout.astro';
 
                     <a href="#" class="flex items-center gap-2.5 text-black dark:text-white mt-25">
                         Know More
-                        <img class="dark:hidden" src="./images/icon/icon-arrow-light.svg" alt="Arrow" />
-                        <img class="hidden dark:block" src="./images/icon/icon-arrow-dark.svg" alt="Arrow" />
+                        <img class="dark:hidden" src="/images/icon/icon-arrow-light.svg" alt="Arrow" />
+                        <img class="hidden dark:block" src="/images/icon/icon-arrow-dark.svg" alt="Arrow" />
                     </a>
                 </div>
 
