--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,14 +1,10 @@
 
 ---
 import Layout from '../layouts/Layout.astro';
-import Chat from '../components/Chat.vue'
-import Chat1 from '../components/Chat1.vue'
-import FeatureTabs from '../components/FeatureTabs.vue'
-import Faq from '../components/Faq.vue'
-import Testimonials from '../components/Testimonials.vue'
+
 ---
 
-<Layout title="Our services.">
+<Layout title="Contact Us">
 
     <!-- ===== Contact us section Start ===== -->
     <section id="support" class="px-4 md:px-8 2xl:px-0 ">
