--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,10 @@ import Workforce from '../assets/images/workforce.jpg'
           <div class="flex lg:items-center lg:gap-8 xl:gap-32.5">
             <div class="animate_left md:w-1/2">
               <h1 class="text-black dark:text-white text-3xl xl:text-hero font-bold mb-5">
-                Unlock Efficiency and
-                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Prosperity</span>
-               with Fort Remote Business Solutions
+                Unlock Efficiency, Accuracy, and
+                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Excellence</span>
               </h1>
-              <p class="text-lg">Unlock Efficiency, Accuracy, and Excellence – Your All-in-One Hub for Remote Business Support Services!</p>
+              <p class="text-lg">Your All-in-One Hub for Remote Business Support Services!</p>
 
               <div class="mt-10">
                 <button class="text-xl flex bg-black hover:bg-blackho dark:bg-btndark text-white rounded-full ease-in-out duration-300 px-7.5 py-2.5 focus:ring focus:ring-primary/20">Get Quote</button>
@@ -201,9 +200,7 @@ import Workforce from '../assets/images/workforce.jpg'
 
       <div class="animate_top mx-auto text-center md:w-4/5 lg:w-2/3 xl:w-1/2 mb-12.5 lg:mb-17.5 px-4 md:px-0">
         <h2 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-4">Global Trust, Local Impact.</h2>
-        <p class="lg:w-11/12 mx-auto">"With a global track record of excellence, we're the trusted partner for efficient,
-          quality-driven remote services. Join satisfied clients and elevate your business with Your Remote Business
-          Solutions..</p>
+        <p class="lg:w-11/12 mx-auto">With a worldwide client base, we understand the unique requirements and regulations of different regions. Our international team is equipped to provide customized solutions tailored to your specific needs, no matter where you're located.</p>
       </div>
 
       <div class="flex flex-wrap justify-center gap-8 lg:gap-42.5">
@@ -344,8 +341,7 @@ import Workforce from '../assets/images/workforce.jpg'
         >
           <div class="flex flex-wrap md:flex-nowrap md:items-center md:justify-between gap-8 md:gap-0">
             <div class="animate_left md:w-[70%] lg:w-1/2">
-              <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle4 font-bold mb-4 w-11/12">Join With Us Today & Increase Your Productivity</h2>
-              <p>Unlock new levels of productivity by partnering with us. Our expert solutions are tailored to your needs, helping you achieve greater efficiency and success. Join our community of forward-thinking businesses today.</p>
+              <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle4 font-bold mb-4 w-11/12">Simplified, Cost-Efficient, and Accurate: Get Started Today!</h2>
             </div>
             <div class="animate_right lg:w-[45%]">
               <div class="flex items-center justify-end xl:justify-between">
