--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import Header from '../components/Header.vue'
 import Footer from '../components/Footer.astro'
 import Chat1 from "../components/Chat1.vue";
+import { ViewTransitions } from 'astro:transitions';
+
 
 interface Props {
 	title: string;
@@ -17,6 +19,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="favicon.svg" type="image/svg">
     <title>{title} | Fort Remote Services</title>
+  <ViewTransitions />
   </head>
   <body class="bg-slate-100">
     <!-- ===== Bg Lines Start ===== -->
@@ -31,7 +34,7 @@ const { title } = Astro.props;
     <Header client:only="vue" />
     <!-- ===== Header End ===== -->
 
-    <main>
+    <main fallback="swap">
      <slot />
     </main>
 
