--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Workforce from '../assets/images/workforce.jpg'
               <p class="text-lg">Your All-in-One Hub for Remote Business Support Services!</p>
 
               <div class="mt-10">
-                <button class="text-xl flex bg-black hover:bg-blackho dark:bg-btndark text-white rounded-full ease-in-out duration-300 px-7.5 py-2.5 focus:ring focus:ring-primary/20">Get Quote</button>
+                <a href="/get-quote" class="text-xl flex bg-black hover:bg-blackho dark:bg-btndark text-white rounded-full ease-in-out duration-300 px-7.5 py-2.5 focus:ring focus:ring-primary/20 w-fit">Get Quote</a>
               </div>
             </div>
             <div class="animate_right md:w-1/2 hidden lg:block">
