--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@
               <li><a href="/" class="inline-block hover:text-primary mb-3">Home</a></li>
               <li><a href="index.html#features" class="inline-block hover:text-primary mb-3">Services</a></li>
               <li><a href="#" class="inline-block hover:text-primary mb-3">Our services</a></li>
-              <li><a href="#" class="inline-block hover:text-primary mb-3">Contact Us</a></li>
+              <li><a href="/contact" class="inline-block hover:text-primary mb-3">Contact Us</a></li>
             </ul>
           </div>
 
@@ -37,7 +37,7 @@
               <li><a href="#" class="inline-block hover:text-primary mb-3">Company</a></li>
               <li><a href="#" class="inline-block hover:text-primary mb-3">Press media</a></li>
               <li><a href="#" class="inline-block hover:text-primary mb-3">Our Blog</a></li>
-              <li><a href="#" class="inline-block hover:text-primary mb-3">Contact Us</a></li>
+              <li><a href="/contact" class="inline-block hover:text-primary mb-3">Contact Us</a></li>
             </ul>
           </div>
 
