Contact Us: form added to mail js of howtodoitech@gmail.com and tried for Get quotr but not worked

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -203,24 +203,24 @@ import Workforce from '../assets/images/workforce.jpg'
         <h2 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-4">Global Trust, Local Impact.</h2>
         <p class="lg:w-11/12 mx-auto">With a worldwide client base, we understand the unique requirements and regulations of different regions. Our international team is equipped to provide customized solutions tailored to your specific needs, no matter where you're located.</p>
       </div>
-      <div class="flex justify-evenly">
+      <div class="flex justify-around">
         <Flags/>
       </div>
 
-      <div class="flex flex-wrap justify-center gap-8 lg:gap-42.5">
-        <div class="animate_top text-center">
-          <h3 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-2.5">500K</h3>
-          <p class="text-lg lg:text-para2">World Wide Clients</p>
-        </div>
-        <div class="animate_top text-center">
-          <h3 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-2.5">1M+</h3>
-          <p class="text-lg lg:text-para2">Downloads</p>
-        </div>
-        <div class="animate_top text-center">
-          <h3 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-2.5">865</h3>
-          <p class="text-lg lg:text-para2">Winning Award</p>
-        </div>
-      </div>
+      <!--<div class="flex flex-wrap justify-center pt-10 gap-8 lg:gap-42.5">-->
+      <!--  <div class="animate_top text-center">-->
+      <!--    &lt;!&ndash;<h3 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-2.5">500K</h3>&ndash;&gt;-->
+      <!--    <p class="text-lg lg:text-para2">World Wide Clients</p>-->
+      <!--  </div>-->
+      <!--  <div class="animate_top text-center">-->
+      <!--    &lt;!&ndash;<h3 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-2.5">1M+</h3>&ndash;&gt;-->
+      <!--    <p class="text-lg lg:text-para2">Downloads</p>-->
+      <!--  </div>-->
+      <!--  <div class="animate_top text-center">-->
+      <!--    &lt;!&ndash;<h3 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-2.5">865</h3>&ndash;&gt;-->
+      <!--    <p class="text-lg lg:text-para2">Winning Award</p>-->
+      <!--  </div>-->
+      <!--</div>-->
     </div>
   </section>
   <!-- ===== Global Impact End ===== -->
