--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -338,9 +338,9 @@ import Workforce from '../assets/images/workforce.jpg'
   </section>
   <!-- ===== Clients End ===== -->
 
-      <!-- ===== CTA Start ===== -->
+  <!-- ===== CTA Start ===== -->
       <section class="py-20 lg:py-25 xl:py-30 px-4 md:px-8 2xl:px-0 overflow-hidden">
-        <div
+     <!--   <div
           class="mx-auto max-w-c-1390 px-7.5 md:px-12.5 xl:px-17.5 py-12.5 xl:py-0 rounded-lg bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-transparent dark:to-transparent dark:bg-blacksection dark:stroke-strokedark"
         >
           <div class="flex flex-wrap md:flex-nowrap md:items-center md:justify-between gap-8 md:gap-0">
@@ -358,7 +358,7 @@ import Workforce from '../assets/images/workforce.jpg'
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
       </section>
       <!-- ===== CTA End ===== -->
 
