added icons carousell animation below tool stack

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -245,13 +245,15 @@ import Workforce from '../assets/images/workforce.jpg'
         <img src="/images/shape/shape-dotted-light.svg" alt="Dotted" class="dark:hidden"/>
         <img src="/images/shape/shape-dotted-dark.svg" alt="Dotted" class="hidden dark:block"/>
       </div>
+
+      <!--quickbooks-->
       <div class="flex flex-wrap gap-y-10 justify-around">
         <div class="animate_top w-1/6">
           <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
             <img class="h-16" src="/images/brand/quickbooks-2.svg" alt="Brand"/>
           </div>
         </div>
-
+<!--//vue-->
         <div class="animate_top w-1/6"></div>
 
         <div class="animate_top w-1/6">
@@ -259,7 +261,7 @@ import Workforce from '../assets/images/workforce.jpg'
             <img class="h-16" src="/images/brand/vue-9.svg" alt="Brand"/>
           </div>
         </div>
-
+<!--//mysql-->
         <div class="animate_top w-1/6">
           <div class="bg-[#FFDB26] rounded-full w-[11px] h-[11px]"></div>
         </div>
@@ -271,7 +273,7 @@ import Workforce from '../assets/images/workforce.jpg'
         </div>
 
         <div class="animate_top w-1/6"></div>
-
+<!--//laravel-->
         <div class="animate_top w-1/6">
           <div class="bg-[#62E888] rounded-full w-[15px] h-[15px]"></div>
         </div>
@@ -281,7 +283,7 @@ import Workforce from '../assets/images/workforce.jpg'
             <img class="h-16" src="/images/brand/laravel-2.svg" alt="Brand"/>
           </div>
         </div>
-
+<!--//excel-->
         <div class="animate_top w-1/6">
           <div class="bg-[#EF5C00] rounded-full w-[23px] h-[23px]"></div>
         </div>
@@ -291,10 +293,11 @@ import Workforce from '../assets/images/workforce.jpg'
             <img class="h-16" src="/images/brand/excel-4.svg" alt="Brand"/>
           </div>
         </div>
-
+        <!--//clickUp-->
         <div class="animate_top w-1/6">
           <div class="bg-[#016BFF] rounded-full w-[15px] h-[15px]"></div>
         </div>
+
 
         <div class="animate_top w-1/6">
           <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
@@ -306,60 +309,99 @@ import Workforce from '../assets/images/workforce.jpg'
   </section>
       <!-- ===== Integrations End ===== -->
   <!-- ===== Clients Start ===== -->
-  <section class="bg-alabaster dark:bg-black border border-x-0 border-y-stroke dark:border-y-strokedark py-11">
-    <div class="mx-auto max-w-c-1390 px-4 md:px-8 2xl:px-0">
-      <div class="grid grid-cols-3 md:grid-cols-6 gap-7.5 lg:gap-12.5 xl:gap-29 justify-center items-center">
-        <a href="#" class="animate_top block">
-          <img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/brand/brand-light-01.svg" alt="Clients" />
-          <img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-01.svg" alt="Clients" />
-        </a>
-        <a href="#" class="animate_top block">
-          <img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/brand/brand-light-02.svg" alt="Clients" />
-          <img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-02.svg" alt="Clients" />
-        </a>
-        <a href="#" class="animate_top block">
-          <img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/brand/brand-light-03.svg" alt="Clients" />
-          <img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-03.svg" alt="Clients" />
-        </a>
-        <a href="#" class="animate_top block">
-          <img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/brand/brand-light-04.svg" alt="Clients" />
-          <img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-04.svg" alt="Clients" />
-        </a>
-        <a href="#" class="animate_top block">
-          <img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/brand/brand-light-05.svg" alt="Clients" />
-          <img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-05.svg" alt="Clients" />
-        </a>
-        <a href="#" class="animate_top block">
+  <section class="bg-alabaster dark:bg-black border border-x-0 border-y-stroke dark:border-y-strokedark py-3">
+    <div class="w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%">
+      <ul class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll">
+        <li class="animate_top block">
+          <img class="h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/intuit-logo.svg" alt="Clients" />
+          <!--<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-01.svg" alt="Clients" />-->
+        </li>
+        <li  class="animate_top block">
+          <img class="h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/zoho.svg" alt="Clients" />
+          <!--<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-02.svg" alt="Clients" />-->
+        </li>
+        <li  class="animate_top block">
+          <img class=" h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/oracle-logo%201.svg" alt="Clients" />
+          <!--<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-03.svg" alt="Clients" />-->
+        </li>
+        <li  class="animate_top block">
+          <!--<img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/quickbooks.svg" alt="Clients" />-->
+          <img class=" h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/quickbooks-2%201.svg" alt="Clients" />
+
+          <!--<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-04.svg" alt="Clients" />-->
+        </li>
+        <li class="animate_top block">
+          <img class="pt-5 h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/sage.svg" alt="Clients" />
+          <!--<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-05.svg" alt="Clients" />-->
+        </li>
+        <li class="animate_top block">
+          <img class=" h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/mysql-logo%201.svg" alt="Clients" />
+          <!--<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-05.svg" alt="Clients" />-->
+        </li>
+        <!--<a href="#" class="animate_top block">
           <img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/brand/brand-light-06.svg" alt="Clients" />
           <img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-06.svg" alt="Clients" />
-        </a>
-      </div>
+        </a>-->
+      </ul>
+    <!--  <ul class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll" aria-hidden="true">
+        <li class="animate_top block">
+          <img class="h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/intuit-logo.svg" alt="Clients" />
+          &lt;!&ndash;<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-01.svg" alt="Clients" />&ndash;&gt;
+        </li>
+        <li  class="animate_top block">
+          <img class="h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/zoho.svg" alt="Clients" />
+          &lt;!&ndash;<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-02.svg" alt="Clients" />&ndash;&gt;
+        </li>
+        <li  class="animate_top block">
+          <img class=" h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/oracle-logo%201.svg" alt="Clients" />
+          &lt;!&ndash;<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-03.svg" alt="Clients" />&ndash;&gt;
+        </li>
+        <li  class="animate_top block">
+          &lt;!&ndash;<img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/quickbooks.svg" alt="Clients" />&ndash;&gt;
+          <img class=" h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/quickbooks-2%201.svg" alt="Clients" />
+
+          &lt;!&ndash;<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-04.svg" alt="Clients" />&ndash;&gt;
+        </li>
+        <li class="animate_top block">
+          <img class="pt-5 h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/sage.svg" alt="Clients" />
+          &lt;!&ndash;<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-05.svg" alt="Clients" />&ndash;&gt;
+        </li>
+        <li class="animate_top block">
+          <img class=" h-20 w-20 transition-all duration-300 hover:scale-110 dark:hidden" src="/images/mysql-logo%201.svg" alt="Clients" />
+          &lt;!&ndash;<img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-05.svg" alt="Clients" />&ndash;&gt;
+        </li>
+        &lt;!&ndash;<a href="#" class="animate_top block">
+          <img class="opacity-65 transition-all duration-300 hover:opacity-100 dark:hidden" src="/images/brand/brand-light-06.svg" alt="Clients" />
+          <img class="hidden opacity-50 transition-all duration-300 hover:opacity-100 dark:block" src="/images/brand/brand-dark-06.svg" alt="Clients" />
+        </a>&ndash;&gt;
+      </ul>-->
+
     </div>
   </section>
   <!-- ===== Clients End ===== -->
 
   <!-- ===== CTA Start ===== -->
-      <section class="py-20 lg:py-25 xl:py-30 px-4 md:px-8 2xl:px-0 overflow-hidden">
-     <!--   <div
-          class="mx-auto max-w-c-1390 px-7.5 md:px-12.5 xl:px-17.5 py-12.5 xl:py-0 rounded-lg bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-transparent dark:to-transparent dark:bg-blacksection dark:stroke-strokedark"
-        >
-          <div class="flex flex-wrap md:flex-nowrap md:items-center md:justify-between gap-8 md:gap-0">
-            <div class="animate_left md:w-[70%] lg:w-1/2">
-              <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle4 font-bold mb-4 w-11/12">Simplified, Cost-Efficient, and Accurate: Get Started Today!</h2>
-            </div>
-            <div class="animate_right lg:w-[45%]">
-              <div class="flex items-center justify-end xl:justify-between">
-                <img src="/images/shape/shape-06.svg" alt="Saly" class="hidden xl:block" />
-                <a href="signup.html" class="inline-flex items-center gap-2.5 font-medium text-white dark:text-black bg-black dark:bg-white rounded-full py-3 px-6">
-                  Sign up free
-                  <img src="/images/icon/icon-arrow-dark.svg" alt="Arrow" class="dark:hidden" />
-                  <img src="/images/icon/icon-arrow-light.svg" alt="Arrow" class="hidden dark:block" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>-->
-      </section>
+  <!--    <section class="py-20 lg:py-25 xl:py-30 px-4 md:px-8 2xl:px-0 overflow-hidden">-->
+  <!--   &lt;!&ndash;   <div-->
+  <!--        class="mx-auto max-w-c-1390 px-7.5 md:px-12.5 xl:px-17.5 py-12.5 xl:py-0 rounded-lg bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-transparent dark:to-transparent dark:bg-blacksection dark:stroke-strokedark"-->
+  <!--      >-->
+  <!--        <div class="flex flex-wrap md:flex-nowrap md:items-center md:justify-between gap-8 md:gap-0">-->
+  <!--          <div class="animate_left md:w-[70%] lg:w-1/2">-->
+  <!--            <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle4 font-bold mb-4 w-11/12">Simplified, Cost-Efficient, and Accurate: Get Started Today!</h2>-->
+  <!--          </div>-->
+  <!--          <div class="animate_right lg:w-[45%]">-->
+  <!--            <div class="flex items-center justify-end xl:justify-between">-->
+  <!--              <img src="/images/shape/shape-06.svg" alt="Saly" class="hidden xl:block" />-->
+  <!--              <a href="signup.html" class="inline-flex items-center gap-2.5 font-medium text-white dark:text-black bg-black dark:bg-white rounded-full py-3 px-6">-->
+  <!--                Sign up free-->
+  <!--                <img src="/images/icon/icon-arrow-dark.svg" alt="Arrow" class="dark:hidden" />-->
+  <!--                <img src="/images/icon/icon-arrow-light.svg" alt="Arrow" class="hidden dark:block" />-->
+  <!--              </a>-->
+  <!--            </div>-->
+  <!--          </div>-->
+  <!--        </div>-->
+  <!--      </div>&ndash;&gt;-->
+  <!--    </section>-->
       <!-- ===== CTA End ===== -->
 
       <!-- ===== FAQ Start ===== -->
@@ -382,6 +424,7 @@ import Workforce from '../assets/images/workforce.jpg'
                 <img class="dark:hidden" src="/images/icon/icon-arrow-light.svg" alt="Arrow" />
                 <img class="hidden dark:block" src="/images/icon/icon-arrow-dark.svg" alt="Arrow" />
               </a>
+
             </div>
 
             <Faq client:only="vue" />
