fix: alignment issue

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 <footer class="bg-white dark:bg-blacksection border-t border-stroke dark:border-strokedark">
-  <div class="mx-auto max-w-c-1390 px-4 md:px-8 2xl:px-0">
+  <div class="mx-auto max-w-c-1390 px-4 md:px-10 xl:px-20">
     <!-- Footer Top -->
     <div class="py-20 lg:py-25">
       <div class="flex flex-wrap lg:justify-between gap-8 lg:gap-0">
