ready for v1 review

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,25 +4,22 @@
 <footer class="bg-white dark:bg-blacksection border-t border-stroke dark:border-strokedark">
   <div class="mx-auto max-w-c-1390 px-4 md:px-10 xl:px-20">
     <!-- Footer Top -->
-    <div class="py-20 lg:py-25">
+    <div class="pt-8 pb-2">
       <div class="flex flex-wrap lg:justify-between gap-8 lg:gap-0">
         <div class="animate_top w-1/2 lg:w-1/4">
-          <a href="index.html">
+          <a href="/">
             <img src="/images/logo/logo-light.svg" alt="Logo" class="dark:hidden" />
             <img src="/images/logo/logo-dark.svg" alt="Logo" class="hidden dark:block" />
           </a>
 
           <p class="mt-5 mb-10">Unlock Efficiency, Accuracy, and Excellence – Your All-in-One Hub for Remote Business Support Services!</p>
-
-          <p class="uppercase tracking-[5px] text-sectiontitle mb-1.5">contact</p>
-          <a href="#" class="text-black dark:text-white font-medium text-itemtitle">sales@fortremote.pro    </a>
         </div>
 
         <div class="w-full lg:w-2/3 xl:w-7/12 flex flex-col md:flex-row md:justify-between gap-8 md:gap-0">
           <div class="animate_top">
-            <h4 class="font-medium text-black dark:text-white text-itemtitle2 mb-9">Quick Links</h4>
+            <h4 class="font-medium  dark:text-white text-itemtitle2 mb-9">Quick Links</h4>
 
-            <ul>
+            <ul class="text-slate-400">
               <li><a href="/" class="inline-block hover:text-primary mb-3">Home</a></li>
               <li><a href="index.html#features" class="inline-block hover:text-primary mb-3">Services</a></li>
               <li><a href="#" class="inline-block hover:text-primary mb-3">Our services</a></li>
@@ -31,9 +28,9 @@
           </div>
 
           <div class="animate_top">
-            <h4 class="font-medium text-black dark:text-white text-itemtitle2 mb-9">Support</h4>
+            <h4 class="font-medium  dark:text-white text-itemtitle2 mb-9">Support</h4>
 
-            <ul>
+            <ul class="text-slate-400">
               <li><a href="#" class="inline-block hover:text-primary mb-3">Company</a></li>
               <li><a href="#" class="inline-block hover:text-primary mb-3">Press media</a></li>
               <li><a href="#" class="inline-block hover:text-primary mb-3">Our Blog</a></li>
@@ -42,18 +39,18 @@
           </div>
 
            <div class="animate_top">
-            <h4 class="font-medium text-black dark:text-white text-itemtitle2">Address</h4>
-            <div class="mb-3 mt-9">
+            <h4 class="font-medium  dark:text-white text-itemtitle2">Address</h4>
+            <div class="mb-3 mt-9 text-slate-400">
               <p>124 City Road, London, <br> EC1V 2NX United Kingdom</p>
             </div>
             <div class="mb-3">
-              <h4 class="font-medium text-black dark:text-white text-metatitle3 ">Email Address</h4>
-              <p><a href="#">sales@fortremote.pro</a></p>
+              <h4 class="font-medium  dark:text-white text-metatitle3 ">Email Address</h4>
+              <p class="text-slate-400"><a href="#">sales@fortremote.pro</a></p>
             </div>
             <div class="mb-3">
-              <h4 class="font-medium text-black dark:text-white text-metatitle3 ">Phone Number</h4>
-              <p><a href="#">+44 121 790 1866</a></p>
-              <p><a href="#">+1 267-995-8208</a></p>
+              <h4 class="font-medium  dark:text-white text-metatitle3 ">Phone Number</h4>
+              <p class="text-slate-400"><a href="#">+44 121 790 1866</a></p>
+              <p class="text-slate-400"><a href="#">+1 267-995-8208</a></p>
             </div>
         </div>
       </div>
@@ -71,7 +68,7 @@
       </div>
 
       <div class="animate_top">
-        <p>&copy; {new Date().getFullYear()} Solid. All rights reserved</p>
+        <p>&copy; {new Date().getFullYear()} FORT Remote. All rights reserved</p>
       </div>
 
       <div class="animate_top">
