--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <title>{title} | Fort Remote Services</title>
   <ViewTransitions />
   </head>
-  <body class="bg-slate-100">
+  <body class="bg-slate-100 text-slate-800">
     <!-- ===== Bg Lines Start ===== -->
     <div class="fixed top-0 left-0 -z-10 flex h-full w-full items-center justify-around">
 	  <span class="w-[1px] h-full bg-stroke dark:bg-strokedark flex animate-line1"></span>
