--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import CtaButton from '../components/CtaButton.vue'
+import SvgIcons from '../components/SvgIcons.vue'
+import HowItWorks from '../components/HowItWorks.vue'
 import FeatureTabs from '../components/FeatureTabs.vue'
 import Faq from '../components/Faq.vue'
 import Flags from '../components/Flags.vue'
@@ -15,18 +18,18 @@ import ClientsSlider from '../components/ClientsSlider.vue'
 
 <Layout title="Welcome to Astro.">
 	 <!-- ===== Hero Start ===== -->
-      <section class="pt-35 md:pt-40 xl:pt-46 pb-20 xl:pb-25 overflow-hidden">
+      <section class="pt-16 xl:pt-24 pb-20 xl:pb-25 overflow-hidden bg-[#007675]">
         <div class="mx-auto max-w-c-1390 px-4 md:px-10 xl:px-20">
           <div class="flex lg:items-center lg:gap-8 xl:gap-32.5">
-            <div class="animate_left md:w-1/2">
-              <h1 class="text-black dark:text-white text-3xl xl:text-hero font-bold mb-5">
+            <div class="animate_left md:w-1/2 text-white">
+              <h1 class="dark:text-white text-3xl xl:text-7xl font-bold mb-5">
                 Unlock Efficiency, Accuracy, and
-                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Excellence</span>
+                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1 bg-gradient-to-r from-teal-400 to-yellow-200 bg-clip-text text-transparent">Excellence</span>
               </h1>
-              <p class="text-lg">Your All-in-One Hub for Remote Business Support Services!</p>
+              <p class="text-xl">Your All-in-One Hub for Remote Business Support Services!</p>
 
               <div class="mt-10">
-                <a href="/get-quote" class="text-xl flex bg-black hover:bg-blackho dark:bg-btndark text-white rounded-full ease-in-out duration-300 px-7.5 py-2.5 focus:ring focus:ring-primary/20 w-fit">Get Quote</a>
+                 <CtaButton class="text-lg rounded-full w-fit">Get Quote</CtaButton>
               </div>
             </div>
             <div class="animate_right md:w-1/2 hidden lg:block">
@@ -45,7 +48,7 @@ import ClientsSlider from '../components/ClientsSlider.vue'
       <!-- ===== Hero End ===== -->
 
   <!-- ===== About Start ===== -->
-  <section id="about" class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
+  <section id="about" class="py-20 overflow-hidden">
     <div class="mx-auto max-w-c-1235 px-4 md:px-10 xl:px-20">
       <div class="flex items-center gap-8 lg:gap-32.5">
         <div class="animate_left hidden md:block md:w-1/2">
@@ -191,167 +194,7 @@ import ClientsSlider from '../components/ClientsSlider.vue'
       <!-- ===== Features Tab End ===== -->
 
   <!--how it works-->
-   <div id="howItWorks" class="bg-transparent flex flex-row justify-center w-full">
-      <div class="overflow-hidden w-[1440px] h-[1436px]">
-        <div class="relative w-[1931px] h-[1478px] top-[-42px] left-[-324px]">
-          <div class="absolute w-[1931px] h-[1478px] top-0 left-0">
-            <div class="relative w-[1440px] h-[1561px] top-[-69px] left-[324px]">
-              <img
-                class="absolute w-[1440px] h-[1436px] top-[111px] left-0"
-                alt="Background"
-                src="/images/background.png"
-              />
-              <img class="absolute w-[1440px] h-[1368px] top-[179px] left-0" alt="Group" src="/images/group.png" />
-              <div class="absolute w-[439px] h-[732px] top-[60px] left-[168px] bg-[#ffc96066] rounded-[219.55px/365.98px] rotate-[27.30deg] blur-[300px]" />
-              <div class="absolute w-[376px] h-[915px] top-[746px] left-[729px] bg-[#6990cc66] rounded-[187.97px/457.35px] rotate-[-66.16deg] blur-[350px]" />
-            </div>
-          </div>
-          <div class="inline-flex flex-col items-start gap-[44px] p-[10px] absolute top-[577px] left-[417px]">
-            <div class="inline-flex items-start gap-[24px] p-[10px] relative flex-[0_0_auto]">
-              <div class="inline-flex flex-col items-start gap-[12px] relative flex-[0_0_auto]">
-                <div class="relative w-[63px] h-[61px]">
-                  <div class="relative w-[61px] h-[61px] bg-white rounded-[30.5px]">
-                    <div class="absolute w-[30px] h-[40px] top-[10px] left-[16px] [font-family:'Lato',Helvetica] font-bold text-black text-[24px] text-center tracking-[0] leading-[normal]">
-                      1
-                    </div>
-                  </div>
-                </div>
-                <div class="relative w-[328px] h-[40px] [font-family:'Lato',Helvetica] font-bold text-white text-[24px] tracking-[0] leading-[normal]">
-                  Initial Consultation
-                </div>
-                <p class="relative w-[389px] h-[141px] [font-family:'Lato',Helvetica] font-normal text-white text-[16px] tracking-[0] leading-[normal]">
-                  Our process begins with a personalized consultation. During this one-on-one discussion, we&#39;ll
-                  <br />
-                  delve into your specific financial needs, whether you&#39;re a business or an individual.
-                  <br />
-                  Understanding your unique circumstances and goals allows us to tailor our services to your
-                  <br />
-                  exact requirements.
-                </p>
-              </div>
-              <div class="inline-flex flex-col h-[266px] items-start gap-[12px] relative flex-[0_0_auto]">
-                <div class="relative w-[63px] h-[61px]">
-                  <div class="relative w-[61px] h-[61px] bg-white rounded-[30.5px]">
-                    <div class="absolute w-[30px] h-[40px] top-[11px] left-[16px] [font-family:'Lato',Helvetica] font-bold text-black text-[24px] text-center tracking-[0] leading-[normal]">
-                      2
-                    </div>
-                  </div>
-                </div>
-                <div class="relative w-[328px] h-[40px] [font-family:'Lato',Helvetica] font-bold text-white text-[24px] tracking-[0] leading-[normal]">
-                  Customized Service Plan
-                </div>
-                <p class="relative w-[389px] h-[174px] mb-[-32.00px] [font-family:'Lato',Helvetica] font-normal text-white text-[16px] tracking-[0] leading-[normal]">
-                  Following the consultation, we develop a customized service plan. This plan outlines the scope
-                  <br />
-                  of our services, the timeline for completion, and transparent pricing. You&#39;ll receive a clear and
-                  <br />
-                  detailed proposal that ensures you know precisely what to expect.
-                </p>
-              </div>
-              <div class="inline-flex flex-col items-start gap-[12px] relative flex-[0_0_auto]">
-                <div class="relative w-[63px] h-[61px]">
-                  <div class="relative w-[61px] h-[61px] bg-white rounded-[30.5px]">
-                    <div class="absolute w-[30px] h-[40px] top-[11px] left-[16px] [font-family:'Lato',Helvetica] font-bold text-black text-[24px] text-center tracking-[0] leading-[normal]">
-                      3
-                    </div>
-                  </div>
-                </div>
-                <div class="relative w-[328px] h-[40px] [font-family:'Lato',Helvetica] font-bold text-white text-[24px] tracking-[0] leading-[normal]">
-                  Secure Data Collection
-                </div>
-                <p class="relative w-[389px] h-[144px] [font-family:'Lato',Helvetica] font-normal text-white text-[16px] tracking-[0] leading-[normal]">
-                  Once the plan is in place, we facilitate the secure collection of your financial data and relevant
-                  documents. You can conveniently upload these files through our encrypted portal or use a method of
-                  your preference. Your data&#39;s security is paramount to us, and we adhere to stringent data
-                  <br />
-                  protection standards.
-                </p>
-              </div>
-            </div>
-            <div class="inline-flex items-start gap-[24px] p-[10px] relative flex-[0_0_auto]">
-              <div class="inline-flex flex-col items-start gap-[12px] relative flex-[0_0_auto]">
-                <div class="relative w-[63px] h-[61px]">
-                  <div class="relative w-[61px] h-[61px] bg-white rounded-[30.5px]">
-                    <div class="absolute w-[30px] h-[40px] top-[10px] left-[16px] [font-family:'Lato',Helvetica] font-bold text-black text-[24px] text-center tracking-[0] leading-[normal]">
-                      4
-                    </div>
-                  </div>
-                </div>
-                <p class="relative w-[348px] h-[40px] [font-family:'Lato',Helvetica] font-bold text-white text-[24px] tracking-[0] leading-[normal]">
-                  Expert Analysis and Data Entry
-                </p>
-                <p class="relative w-[389px] h-[174px] [font-family:'Lato',Helvetica] font-normal text-white text-[16px] tracking-[0] leading-[normal]">
-                  With your financial information in our hands, our skilled
-                  <br />
-                  team of bookkeepers and data entry specialists
-                  <br />
-                  meticulously analyze and organize the data. We prioritize accuracy and compliance with industry
-                  standards and regulations. Every transaction is entered with precision to eliminate errors and
-                  maintain data integrity.
-                </p>
-              </div>
-              <div class="inline-flex flex-col items-start gap-[12px] relative flex-[0_0_auto]">
-                <div class="relative w-[63px] h-[61px]">
-                  <div class="relative w-[61px] h-[61px] bg-white rounded-[30.5px]">
-                    <div class="absolute w-[30px] h-[40px] top-[10px] left-[16px] [font-family:'Lato',Helvetica] font-bold text-black text-[24px] text-center tracking-[0] leading-[normal]">
-                      5
-                    </div>
-                  </div>
-                </div>
-                <div class="relative w-[328px] h-[40px] [font-family:'Lato',Helvetica] font-bold text-white text-[24px] tracking-[0] leading-[normal]">
-                  Cloud-Based Accessibility and Reporting
-                </div>
-                <p class="relative w-[389px] [font-family:'Lato',Helvetica] font-normal text-white text-[16px] tracking-[0] leading-[normal]">
-                  <br />
-                  Our cloud-based accounting system provides you with 24/7 access to your financial records and reports.
-                  You can stay informed about your financial status from anywhere in the world. We also provide regular
-                  financial reports, including income statements,
-                  <br />
-                  balance sheets, and cash flow statements, to offer you valuable insights into your financial health.
-                </p>
-              </div>
-              <div class="inline-flex flex-col items-start gap-[12px] relative flex-[0_0_auto]">
-                <div class="relative w-[63px] h-[61px]">
-                  <div class="relative w-[61px] h-[61px] bg-white rounded-[30.5px]">
-                    <div class="absolute w-[30px] h-[40px] top-[10px] left-[16px] [font-family:'Lato',Helvetica] font-bold text-black text-[24px] text-center tracking-[0] leading-[normal]">
-                      6
-                    </div>
-                  </div>
-                </div>
-                <div class="relative w-[359px] h-[40px] [font-family:'Lato',Helvetica] font-bold text-white text-[24px] tracking-[0] leading-[normal]">
-                  Ongoing Support and Adaptation
-                </div>
-                <p class="relative w-[389px] h-[174px] [font-family:'Lato',Helvetica] font-normal text-white text-[16px] tracking-[0] leading-[normal]">
-                  Our commitment to your financial success doesn&#39;t end with data entry and reporting. We offer
-                  ongoing support, readily available for any questions, assistance, or strategic discussions you may
-                  require. As your business or personal financial needs evolve, we adapt our services to ensure a
-                  continued, effective partnership.
-                </p>
-              </div>
-            </div>
-          </div>
-          <header class="inline-flex items-center gap-[29px] absolute top-[91px] left-[427px] bg-transparent">
-            <div class="relative w-[572px] h-[187px]">
-              <div class="absolute w-[290px] top-0 left-0 [font-family:'Lato',Helvetica] font-bold text-white text-[42px] tracking-[0] leading-[normal] whitespace-nowrap">
-                Our Process
-              </div>
-              <p class="absolute w-[568px] top-[70px] left-0 [font-family:'Lato',Helvetica] font-normal text-white text-[24px] tracking-[0] leading-[normal]">
-                Discover how we make freelancing a breeze with our simple and transparent process, guiding you from
-                sign-up to project completion. Join us and experience the ease and reliability of freelancing at its
-                best.
-              </p>
-            </div>
-            <div class="relative w-[678px] h-[450px] mr-[-2.00px]">
-              <div class="relative w-[676px] h-[450px] bg-[url(/images/work-day-1.png)] bg-cover bg-[50%_50%]">
-                <p class="absolute w-[568px] top-[370px] left-[54px] [font-family:'Lato',Helvetica] font-normal text-white text-[24px] tracking-[0] leading-[normal]">
-                  We turn freelancing into a seamless and hassle-free experience for everyone.
-                </p>
-              </div>
-            </div>
-          </header>
-        </div>
-      </div>
-    </div>
+   <HowItWorks />
   <!--end how it works-->
 
   <!-- ===== Global Impact Start ===== -->
@@ -483,7 +326,28 @@ import ClientsSlider from '../components/ClientsSlider.vue'
 
       <!-- ===== FAQ Start ===== -->
       <section class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
-            <Faq />
+            <Faq client:only="vue" />
+        <!-- This example requires Tailwind CSS v2.0+ -->
+        <div class="bg-[#007675]">
+          <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+            <h2 class="text-3xl font-extrabold tracking-tight text-white sm:text-4xl">
+              <span class="block">Still have questions?</span>
+              <span class="block bg-gradient-to-r from-teal-400 to-yellow-200 bg-clip-text text-transparent">Reach out for any enquiries today</span>
+            </h2>
+            <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
+              <div class="inline-flex">
+                <a href="#" class="faq-cta">
+                    Sign up
+                    <div class="arrow-wrapper">
+                        <div class="arrow"></div>
+
+                    </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </section>
       <!-- ===== FAQ End ===== -->
 
@@ -524,5 +388,63 @@ import ClientsSlider from '../components/ClientsSlider.vue'
 </Layout>
 
 <style>
+.faq-cta {
+  --primary-color: rgb(27, 42, 40);
+  --secondary-color: #fff;
+  --hover-color: #111;
+  --arrow-width: 10px;
+  --arrow-stroke: 2px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 20px;
+  color: var(--secondary-color);
+  padding: 1em 1.8em;
+  background: var(--primary-color);
+  display: flex;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
+}
 
+.faq-cta .arrow-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.faq-cta .arrow {
+  margin-top: 1px;
+  width: var(--arrow-width);
+  background: var(--primary-color);
+  height: var(--arrow-stroke);
+  position: relative;
+  transition: 0.2s;
+}
+
+.faq-cta .arrow::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  border: solid var(--secondary-color);
+  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+  display: inline-block;
+  top: -3px;
+  right: 3px;
+  transition: 0.2s;
+  padding: 3px;
+  transform: rotate(-45deg);
+}
+
+.faq-cta:hover {
+  background-color: var(--hover-color);
+}
+
+.faq-cta:hover .arrow {
+  background: var(--secondary-color);
+}
+
+.faq-cta:hover .arrow:before {
+  right: 0;
+}
 </style>
